# ttyt

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  output.txt  pyproject.toml
.github/workflows/: tests-mac.yaml
scripts/: initialize.py  run.py
tests/models/: test_command_parsing.py  test_lmstudio_client.py
ttyt/: logging_utils.py
ttyt/agent/: agent.py
ttyt/audio/deepgram/: client.py  microphone_listener.py
ttyt/models/: command_parsing.py  lmstudio_client.py  tools.py
